# tester

./: .gitignore  README.md  pyproject.toml
apps/TesterWorkbench/TesterWorkbench/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  TesterWorkbench.csproj
apps/TesterWorkbench/TesterWorkbench.Tests/: Program.cs  TesterWorkbench.Tests.csproj
docs/design/: embedded-sw-tester-detailed-design.md
docs/mockups/: gui-block-editor-mockup.html  workbench-ui-ux-comparison.html
docs/ui-ux/: a-workbench-smoke-checklist.md
samples/: boot-smoke.yaml  canalyzer-com-smoke.yaml  canoe-com-smoke.yaml  psu-vupower-smoke.yaml  real-tools-smoke.yaml  sent-usb-smoke.yaml  workbench-demo.yaml
samples/libs/: common-power-sequence.yaml
samples/tool-profiles/: lab-serial.tools.yaml  lab.tools.yaml  vector-canalyzer.tools.yaml  vector-canoe.tools.yaml
src/embsw_tester/: __init__.py  cli.py
tests/: test_adapters.py  test_canoe_adapter.py  test_canoe_bridge_transport.py  test_canoe_com_helper.py  test_canoe_factory.py  test_catalog.py  test_cli.py  test_compiler.py  test_device_command_profiles.py  test_inca_adapter.py  test_inca_bridge.py  test_inca_bridge_transport.py  test_inca_com_helper.py  test_inca_factory.py  test_mach_sent_gateway.py  test_reports.py  test_runtime.py  test_serial_adapter.py  test_serial_factory.py  test_serial_pyserial.py  test_tool_profile.py  test_trace32_adapter.py  test_trace32_factory.py  test_trace32_transport.py  test_vupower_k.py  test_workbench_block_selection.py  test_workbench_xaml.py
(+88 files in other folders)
