[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-sw-tester"
version = "0.1.0"
description = "Embedded SW test authoring and execution tool prototype"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
embsw-tester = "embsw_tester.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
serial = [
  "pyserial>=3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["src"]
